--- a/client_app/index.html
+++ b/client_app/index.html
@@ -21,7 +21,7 @@
         const stopButton = document.getElementById("stop");
         const responseElement = document.getElementById("response");
         const loadingElement = document.getElementById("loading");
-        let socket = new WebSocket("ws://localhost:8765/ws");
+        let socket = new WebSocket("ws://158.160.125.187:8765/ws");
         socket.onmessage = (event) => {
             const data = JSON.parse(event.data);
             const inputText = data.input || "No input detected";
